almost finished print every 1000th item logic

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,10 +31,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/assignment1StartingCode.jar
+dist.jar=${dist.dir}/Sort.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/assignment1StartingCode
+dist.jlink.output=${dist.jlink.dir}/Sort
 excludes=
 file.reference.assignment1StartingCode-src=src
 includes=**
@@ -74,7 +74,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=assignment1StartingCode
+jlink.launcher.name=Sort
 main.class=appDomain.AppDriver
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
