--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,20 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+/src/bin/assignment1.iml
+/bin/bin/bin/.classpath
+/bin/bin/.classpath
+/src/bin/bin/.classpath
+/src/bin/.classpath
+/.idea/.gitignore
+/bin/bin/bin/.project
+/bin/bin/.project
+/src/bin/bin/.project
+/src/bin/.project
+/bin/bin/bin/assignment1.eml
+/bin/bin/assignment1.eml
+/src/bin/bin/assignment1.eml
+/src/bin/assignment1.eml
+/bin/bin/assignment1.iml
+/assignment1StartingCode.iml
+/.idea/
